As a User I can see my data [Delivers #179780497]
FIX [Delivers #179780497]
